New methods and a few fixes
